<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Morph Analysis</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="button_send">Send</string>
    <string name="edit_message">Enter a word</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_dsiplay_message">Query Result</string>
    <string name="info">Built using The Tower of Babel project\'s etymological and morphalogical database tools.\nFind more here: http://starling.rinet.ru/</string>
	
    <string name="popup_copy">Copied to Clipboard</string>
    <string name="popup_dictionary">Dictionary</string>
    <string name="popup_search">Search Context</string>
        <string name="back">Back</string>
        <string name="open_browser">Open in Browser</string>
        
    <string name="popup_share">Share</string>
    <string name="popup_pronounce">Pronounce</string>
    
    
</resources>
