<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/popup_window_header"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@drawable/balloon"
    android:orientation="horizontal" 
    android:padding="5dp"
    android:gravity="center"
    >
    
    
    <ImageView
    android:id="@+id/popup_copy"
    android:layout_margin="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/popup_copy"
    android:src="@drawable/ic_action_copy"
    android:onClick="copyToClipboard"
    />
    
    <ImageView
    android:id="@+id/popup_dictionary"
    android:layout_margin="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/popup_dictionary"
    android:src="@drawable/ic_action_book"
    android:onClick="lookupDictionary"
    />
    
    <ImageView
    android:id="@+id/popup_search"
    android:layout_margin="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/popup_search"
    android:src="@drawable/ic_action_search"
    android:onClick="lookupSearch"
    />

</LinearLayout>
